Fixing css spacing, and cleanup.

--- a/static/css/overview.css
+++ b/static/css/overview.css
@@ -66,8 +66,3 @@
   font-size: 48px; margin-top: 2em;
   margin-bottom: 0.5em;
 }
-/*
-footer {
-  margin-top: 12em;
-}
-*/
